GYRO/XL data is being correctly received.

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -28,6 +28,11 @@ endif
 
 -include ../makefile.defs
 
+BUILD_ARTIFACT_NAME := stm32f7-drone
+BUILD_ARTIFACT_EXTENSION := elf
+BUILD_ARTIFACT_PREFIX := 
+BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME).$(BUILD_ARTIFACT_EXTENSION)
+
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
 stm32f7-drone.elf \
@@ -43,7 +48,10 @@ stm32f7-drone.bin \
 
 
 # All Target
-all: stm32f7-drone.elf secondary-outputs
+all: main-build
+
+# Main-build Target
+main-build: stm32f7-drone.elf secondary-outputs
 
 # Tool invocations
 stm32f7-drone.elf: $(OBJS) $(USER_OBJS) C:\Users\jeffr\STM32CubeIDE\workspace_1.4.0\stm32f7-drone\STM32F722ZETX_FLASH.ld
@@ -73,7 +81,14 @@ clean:
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
-.PHONY: all clean dependents
+fail-specified-linker-script-missing:
+	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
+	@exit 2
+
+warn-no-linker-script-specified:
+	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
+
+.PHONY: all clean dependents fail-specified-linker-script-missing warn-no-linker-script-specified
 .SECONDARY:
 
 -include ../makefile.targets
